[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Prototype/PlayerTexture.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape" id=2]
radius = 0.3
height = 0.4

[sub_resource type="CapsuleShape" id=3]
radius = 0.35
height = 0.4

[node name="Enemy" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
billboard = 1
frames = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
shape = SubResource( 2 )

[node name="Hitbox" type="Area" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2" type="CollisionShape" parent="Hitbox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="Los" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -10 )
collision_mask = 3

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
